--- a/src/containers/home.scss
+++ b/src/containers/home.scss
@@ -2,20 +2,16 @@
 
 .home-container {
   display: flex;
-  min-width: 100%;
-  min-height: 100%;
-  padding: 10px;
-  margin: auto 0;
+  width: auto;
+  height: 100%;
+  justify-content: space-around;
   align-items: center;
-  justify-content: space-evenly;
-  align-self: center;
 
   iframe {
     @include card();
-    width: 450px;
-    height: 270px;
+    width: 480px;
+    height: 300px;
     border-radius: 10px;
-    align-self: flex-start;
   }
 }
 
