--- a/src/index.scss
+++ b/src/index.scss
@@ -28,8 +28,8 @@ html {
 }
 
 #root {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   padding: 0;
 }
